// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BillingComparisonPlanCard /> should not render plan as current plan 1`] = `
<div
  class="plan blueTheme card"
>
  <div
    class="planHeader card-header"
  >
    <div
      class="headerText"
    >
      <div
        class="planName"
        title="Basic"
      >
        Basic
      </div>
      <span
        class="headerPrice"
      >
        <div
          class="amountWrapper"
        >
          <span>
            $60
             
            / 
            month
          </span>
        </div>
      </span>
    </div>
  </div>
  <div>
    <div
      class="automationRow"
    >
      <div
        class="checkbox"
      >
        <label
          class="label"
          for="basic-monthly-usd-242"
        >
          <input
            class="input"
            id="basic-monthly-usd-242"
            name="basic-monthly-usd-242"
            type="checkbox"
          />
          <div
            class="align-middle checkboxLabel"
          >
            <span
              id="automation-text-basic-monthly-usd-242"
            >
              Automation
            </span>
          </div>
        </label>
        <div
          class="caption"
        />
      </div>
      <div
        class="amountContainer"
      >
        <div
          class="amountWrapper amount amountDisabled"
        >
          <span
            class="amount"
            id="subscription-amount-tooltip-target-42"
          >
            <span
              class="discountedAmount"
            >
              $40
            </span>
            <wbr />
            <b>
              $20
            </b>
             
            / 
            mo
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="cardBody card-body"
  >
    <ul
      class="featureList"
    >
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            playlist_add_check
          </i>
        </span>
        <span>
          <span
            class="billableTickets"
            id="billable-ticket-label-42"
          >
            350
             
            billable tickets
          </span>
           
          included
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            thumb_up
          </i>
        </span>
        <span>
          Facebook, Messenger, Instagram & DMs
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            forum
          </i>
        </span>
        <span>
          Live chat
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            phone
          </i>
        </span>
        <span>
          <b>
            1
          </b>
           Phone number
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            auto_awesome
          </i>
        </span>
        <span>
          Macros and rules
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem disabledFeatureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            insert_emoticon
          </i>
        </span>
        <span>
          Satisfaction surveys
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            web_asset
          </i>
        </span>
        <span>
          <div>
            Unlimited
             
            <span
              class="underline"
              id="help-center-label-42"
            >
              Help centers
            </span>
          </div>
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            directions_walk
          </i>
        </span>
        <span>
          <b>
            Self
          </b>
           onboarding
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem disabledFeatureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            attach_money
          </i>
        </span>
        <span>
          Revenue statistics
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon"
            style="mask: url(test-file-stub) 0 0/var(--feature-icon-size) no-repeat;"
          />
        </span>
        <span>
          Magento integration
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem disabledFeatureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            person_pin
          </i>
        </span>
        <span>
          Dedicated success manager
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem disabledFeatureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            blur_on
          </i>
        </span>
        <span>
          Custom services
        </span>
      </li>
    </ul>
  </div>
  <div
    class="cardFooter card-footer"
  >
    <div
      class="row"
    >
      <div>
        Total
      </div>
      <div
        class="amountContainer"
      >
        <div
          class="amountWrapper amount"
        >
          <span>
            <b>
              $60
            </b>
             
            / 
            month
          </span>
        </div>
      </div>
    </div>
    <button
      aria-label="Switch to Basic Plan"
      class="footerButton btn btn-link"
      type="button"
    >
      Switch to Basic Plan
    </button>
  </div>
</div>
`;

exports[`<BillingComparisonPlanCard /> should render current legacy plan 1`] = `
<div
  class="plan greyTheme card"
>
  <div
    class="planHeader card-header"
  >
    <div>
      <span
        class="currentPlanBadge badge badge-secondary"
      >
        CURRENT PLAN
      </span>
    </div>
    <div
      class="headerText"
    >
      <div
        class="planName"
        title="Standard"
      >
        Standard
      </div>
      <span
        class="headerPrice"
      >
        <div
          class="amountWrapper"
        >
          <span>
            $3,000
             
            / 
            month
          </span>
        </div>
      </span>
    </div>
  </div>
  <div>
    <div
      class="automationRow"
    >
      <div
        class="checkbox"
      >
        <label
          class="label"
          for="standard-usd-142"
        >
          <input
            class="input"
            id="standard-usd-142"
            name="standard-usd-142"
            type="checkbox"
          />
          <div
            class="align-middle checkboxLabel"
          >
            <span
              id="automation-text-standard-usd-142"
            >
              Automation
            </span>
          </div>
        </label>
        <div
          class="caption"
        />
      </div>
      <div
        class="amountContainer"
      >
        <div
          class="amountWrapper amount amountDisabled"
        >
          <span
            class="amount"
            id="subscription-amount-tooltip-target-42"
          >
            <span
              class="discountedAmount"
            >
              $5,928
            </span>
            <wbr />
            <b>
              $2,964
            </b>
             
            / 
            mo
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="cardBody card-body"
  >
    <ul
      class="featureList"
    >
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            playlist_add_check
          </i>
        </span>
        <span>
          <span
            class="billableTickets"
            id="billable-ticket-label-42"
          >
            350
             
            billable tickets
          </span>
           
          included
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            thumb_up
          </i>
        </span>
        <span>
          Facebook, Messenger, Instagram & DMs
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            forum
          </i>
        </span>
        <span>
          Live chat
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem disabledFeatureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            phone
          </i>
        </span>
        <span>
          Phone
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            auto_awesome
          </i>
        </span>
        <span>
          Macros and rules
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem disabledFeatureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            insert_emoticon
          </i>
        </span>
        <span>
          Satisfaction surveys
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem disabledFeatureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            web_asset
          </i>
        </span>
        <span>
          <span>
            No Help center
          </span>
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            directions_bike
          </i>
        </span>
        <span>
          <b>
            Lite
          </b>
           onboarding
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem disabledFeatureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            attach_money
          </i>
        </span>
        <span>
          Revenue statistics
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon"
            style="mask: url(test-file-stub) 0 0/var(--feature-icon-size) no-repeat;"
          />
        </span>
        <span>
          Magento integration
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem disabledFeatureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            person_pin
          </i>
        </span>
        <span>
          Dedicated success manager
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem disabledFeatureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            blur_on
          </i>
        </span>
        <span>
          Custom services
        </span>
      </li>
    </ul>
  </div>
  <div
    class="cardFooter card-footer"
  >
    <div
      class="row"
    >
      <div>
        Total
      </div>
      <div
        class="amountContainer"
      >
        <div
          class="amountWrapper amount"
        >
          <span>
            <b>
              $3,000
            </b>
             
            / 
            month
          </span>
        </div>
      </div>
    </div>
    <button
      aria-label="Current Plan"
      class="footerButton btn btn-link disabled"
      disabled=""
      type="button"
    >
      Current Plan
    </button>
  </div>
</div>
`;

exports[`<BillingComparisonPlanCard /> should render current plan 1`] = `
<div
  class="plan greyTheme card"
>
  <div
    class="planHeader card-header"
  >
    <div>
      <span
        class="currentPlanBadge badge badge-primary"
      >
        CURRENT PLAN
      </span>
    </div>
    <div
      class="headerText"
    >
      <div
        class="planName"
        title="Basic"
      >
        Basic
      </div>
      <span
        class="headerPrice"
      >
        <div
          class="amountWrapper"
        >
          <span>
            $60
             
            / 
            month
          </span>
        </div>
      </span>
    </div>
  </div>
  <div>
    <div
      class="automationRow"
    >
      <div
        class="checkbox"
      >
        <label
          class="label"
          for="basic-monthly-usd-242"
        >
          <input
            class="input"
            id="basic-monthly-usd-242"
            name="basic-monthly-usd-242"
            type="checkbox"
          />
          <div
            class="align-middle checkboxLabel"
          >
            <span
              id="automation-text-basic-monthly-usd-242"
            >
              Automation
            </span>
          </div>
        </label>
        <div
          class="caption"
        />
      </div>
      <div
        class="amountContainer"
      >
        <div
          class="amountWrapper amount amountDisabled"
        >
          <span
            class="amount"
            id="subscription-amount-tooltip-target-42"
          >
            <span
              class="discountedAmount"
            >
              $40
            </span>
            <wbr />
            <b>
              $20
            </b>
             
            / 
            mo
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="cardBody card-body"
  >
    <ul
      class="featureList"
    >
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            playlist_add_check
          </i>
        </span>
        <span>
          <span
            class="billableTickets"
            id="billable-ticket-label-42"
          >
            350
             
            billable tickets
          </span>
           
          included
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            thumb_up
          </i>
        </span>
        <span>
          Facebook, Messenger, Instagram & DMs
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            forum
          </i>
        </span>
        <span>
          Live chat
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            phone
          </i>
        </span>
        <span>
          <b>
            1
          </b>
           Phone number
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            auto_awesome
          </i>
        </span>
        <span>
          Macros and rules
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem disabledFeatureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            insert_emoticon
          </i>
        </span>
        <span>
          Satisfaction surveys
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            web_asset
          </i>
        </span>
        <span>
          <div>
            Unlimited
             
            <span
              class="underline"
              id="help-center-label-42"
            >
              Help centers
            </span>
          </div>
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            directions_walk
          </i>
        </span>
        <span>
          <b>
            Self
          </b>
           onboarding
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem disabledFeatureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            attach_money
          </i>
        </span>
        <span>
          Revenue statistics
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon"
            style="mask: url(test-file-stub) 0 0/var(--feature-icon-size) no-repeat;"
          />
        </span>
        <span>
          Magento integration
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem disabledFeatureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            person_pin
          </i>
        </span>
        <span>
          Dedicated success manager
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem disabledFeatureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            blur_on
          </i>
        </span>
        <span>
          Custom services
        </span>
      </li>
    </ul>
  </div>
  <div
    class="cardFooter card-footer"
  >
    <div
      class="row"
    >
      <div>
        Total
      </div>
      <div
        class="amountContainer"
      >
        <div
          class="amountWrapper amount"
        >
          <span>
            <b>
              $60
            </b>
             
            / 
            month
          </span>
        </div>
      </div>
    </div>
    <button
      aria-label="Current Plan"
      class="footerButton btn btn-link disabled"
      disabled=""
      type="button"
    >
      Current Plan
    </button>
  </div>
</div>
`;

exports[`<BillingComparisonPlanCard /> should render custom plan 1`] = `
<div
  class="plan greyTheme card"
>
  <div
    class="planHeader card-header"
  >
    <div>
      <span
        class="currentPlanBadge badge badge-warning"
      >
        CURRENT PLAN
      </span>
    </div>
    <div
      class="headerText"
    >
      <div
        class="planName"
        title="Custom"
      >
        Custom
      </div>
      <span
        class="headerPrice"
      >
        <div
          class="amountWrapper"
        >
          <span>
            $540
             
            / 
            month
          </span>
        </div>
      </span>
    </div>
  </div>
  <div>
    <div
      class="automationRow"
    >
      <div
        class="align-middle checkboxLabel"
      >
        <span
          id="automation-text-custom-monthly-usd-242"
        >
          Automation
        </span>
      </div>
      <div
        class="amountContainer"
      >
        <i>
          ?
        </i>
      </div>
    </div>
  </div>
  <div
    class="cardBody card-body"
  >
    <ul
      class="featureList"
    >
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            playlist_add_check
          </i>
        </span>
        <span>
          <span
            class="billableTickets"
            id="billable-ticket-label-42"
          >
            2,000
             
            billable tickets
          </span>
           
          included
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            thumb_up
          </i>
        </span>
        <span>
          Facebook, Messenger, Instagram & DMs
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            forum
          </i>
        </span>
        <span>
          Live chat
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            phone
          </i>
        </span>
        <span>
          <b>
            50
          </b>
           Phone number
          s
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            auto_awesome
          </i>
        </span>
        <span>
          Macros and rules
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            insert_emoticon
          </i>
        </span>
        <span>
          Satisfaction surveys
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            web_asset
          </i>
        </span>
        <span>
          <div>
            Unlimited
             
            <span
              class="underline"
              id="help-center-label-42"
            >
              Help centers
            </span>
          </div>
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            directions_car
          </i>
        </span>
        <span>
          <b>
            Full
          </b>
           onboarding
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem disabledFeatureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            attach_money
          </i>
        </span>
        <span>
          Revenue statistics
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon"
            style="mask: url(test-file-stub) 0 0/var(--feature-icon-size) no-repeat;"
          />
        </span>
        <span>
          Magento integration
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            person_pin
          </i>
        </span>
        <span>
          Dedicated success manager
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            blur_on
          </i>
        </span>
        <span>
          Custom services
        </span>
      </li>
    </ul>
  </div>
  <div
    class="cardFooter card-footer"
  >
    <div
      class="row"
    >
      <div
        class="mx-auto font-weight-normal font-italic"
      >
        ?
      </div>
    </div>
    <button
      aria-label="Current Plan"
      class="footerButton btn btn-link disabled"
      disabled=""
      type="button"
    >
      Current Plan
    </button>
  </div>
</div>
`;

exports[`<BillingComparisonPlanCard /> should render customLegacyPlan plan 1`] = `
<div
  class="plan greyTheme card"
>
  <div
    class="planHeader card-header"
  >
    <div>
      <span
        class="currentPlanBadge badge badge-warning"
      >
        CURRENT PLAN
      </span>
    </div>
    <div
      class="headerText"
    >
      <div
        class="planName"
        title="Custom"
      >
        Custom
      </div>
      <span
        class="headerPrice"
      >
        <div
          class="amountWrapper"
        >
          <span>
            $540
             
            / 
            month
          </span>
        </div>
      </span>
    </div>
  </div>
  <div>
    <div
      class="automationRow"
    >
      <div
        class="align-middle checkboxLabel"
      >
        <span
          id="automation-text-custom-monthly-usd-242"
        >
          Automation
        </span>
      </div>
      <div
        class="amountContainer"
      >
        <i>
          ?
        </i>
      </div>
    </div>
  </div>
  <div
    class="cardBody card-body"
  >
    <ul
      class="featureList"
    >
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            playlist_add_check
          </i>
        </span>
        <span>
          <span
            class="billableTickets"
            id="billable-ticket-label-42"
          >
            2,000
             
            billable tickets
          </span>
           
          included
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            thumb_up
          </i>
        </span>
        <span>
          Facebook, Messenger, Instagram & DMs
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            forum
          </i>
        </span>
        <span>
          Live chat
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            phone
          </i>
        </span>
        <span>
          <b>
            50
          </b>
           Phone number
          s
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            auto_awesome
          </i>
        </span>
        <span>
          Macros and rules
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            insert_emoticon
          </i>
        </span>
        <span>
          Satisfaction surveys
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem disabledFeatureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            web_asset
          </i>
        </span>
        <span>
          <span>
            No Help center
          </span>
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            directions_car
          </i>
        </span>
        <span>
          <b>
            Full
          </b>
           onboarding
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem disabledFeatureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            attach_money
          </i>
        </span>
        <span>
          Revenue statistics
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon"
            style="mask: url(test-file-stub) 0 0/var(--feature-icon-size) no-repeat;"
          />
        </span>
        <span>
          Magento integration
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            person_pin
          </i>
        </span>
        <span>
          Dedicated success manager
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            blur_on
          </i>
        </span>
        <span>
          Custom services
        </span>
      </li>
    </ul>
  </div>
  <div
    class="cardFooter card-footer"
  >
    <div
      class="row"
    >
      <div
        class="mx-auto font-weight-normal font-italic"
      >
        ?
      </div>
    </div>
    <button
      aria-label="Current Plan"
      class="footerButton btn btn-link disabled"
      disabled=""
      type="button"
    >
      Current Plan
    </button>
  </div>
</div>
`;

exports[`<BillingComparisonPlanCard /> should render spinner when plan is updating 1`] = `
<div
  class="plan blueTheme card"
>
  <div
    class="planHeader card-header"
  >
    <div
      class="headerText"
    >
      <div
        class="planName"
        title="Basic"
      >
        Basic
      </div>
      <span
        class="headerPrice"
      >
        <div
          class="amountWrapper"
        >
          <span>
            $60
             
            / 
            month
          </span>
        </div>
      </span>
    </div>
  </div>
  <div>
    <div
      class="automationRow"
    >
      <div
        class="checkbox"
      >
        <label
          class="label"
          for="basic-monthly-usd-242"
        >
          <input
            class="input"
            id="basic-monthly-usd-242"
            name="basic-monthly-usd-242"
            type="checkbox"
          />
          <div
            class="align-middle checkboxLabel"
          >
            <span
              id="automation-text-basic-monthly-usd-242"
            >
              Automation
            </span>
          </div>
        </label>
        <div
          class="caption"
        />
      </div>
      <div
        class="amountContainer"
      >
        <div
          class="amountWrapper amount amountDisabled"
        >
          <span
            class="amount"
            id="subscription-amount-tooltip-target-42"
          >
            <span
              class="discountedAmount"
            >
              $40
            </span>
            <wbr />
            <b>
              $20
            </b>
             
            / 
            mo
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="cardBody card-body"
  >
    <ul
      class="featureList"
    >
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            playlist_add_check
          </i>
        </span>
        <span>
          <span
            class="billableTickets"
            id="billable-ticket-label-42"
          >
            350
             
            billable tickets
          </span>
           
          included
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            thumb_up
          </i>
        </span>
        <span>
          Facebook, Messenger, Instagram & DMs
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            forum
          </i>
        </span>
        <span>
          Live chat
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            phone
          </i>
        </span>
        <span>
          <b>
            1
          </b>
           Phone number
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            auto_awesome
          </i>
        </span>
        <span>
          Macros and rules
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem disabledFeatureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            insert_emoticon
          </i>
        </span>
        <span>
          Satisfaction surveys
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            web_asset
          </i>
        </span>
        <span>
          <div>
            Unlimited
             
            <span
              class="underline"
              id="help-center-label-42"
            >
              Help centers
            </span>
          </div>
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            directions_walk
          </i>
        </span>
        <span>
          <b>
            Self
          </b>
           onboarding
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem disabledFeatureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            attach_money
          </i>
        </span>
        <span>
          Revenue statistics
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon"
            style="mask: url(test-file-stub) 0 0/var(--feature-icon-size) no-repeat;"
          />
        </span>
        <span>
          Magento integration
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem disabledFeatureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            person_pin
          </i>
        </span>
        <span>
          Dedicated success manager
        </span>
      </li>
      <li
        class="d-flex align-items-center featureListItem disabledFeatureListItem"
      >
        <span
          class="featureIcon mr-3"
        >
          <i
            class="icon material-icons"
          >
            blur_on
          </i>
        </span>
        <span>
          Custom services
        </span>
      </li>
    </ul>
  </div>
  <div
    class="cardFooter card-footer"
  >
    <div
      class="row"
    >
      <div>
        Total
      </div>
      <div
        class="amountContainer"
      >
        <div
          class="amountWrapper amount"
        >
          <span>
            <b>
              $60
            </b>
             
            / 
            month
          </span>
        </div>
      </div>
    </div>
    <button
      aria-label="Switch to Basic Plan"
      class="footerButton btn-loading btn btn-link disabled"
      disabled=""
      type="button"
    >
      Switch to Basic Plan
    </button>
  </div>
</div>
`;
